workspace/compiler/tests/snapshots/test_snap_typescript__ts_toolkit_ir.snap
---
source: workspace/compiler/tests/snap_typescript.rs
assertion_line: 225
expression: sorted
---
{
    "mod": Module(
        Symbol {
            name: "mod",
            path: Local(
                "mod",
            ),
            aliases: None,
            visibility: Public,
            documentation: None,
            deprecation: None,
            doc_links: None,
            inner: Module {
                members: Some(
                    [
                        Local(
                            "mod::toolkit",
                        ),
                        Local(
                            "mod::Builder",
                        ),
                        Local(
                            "mod::install",
                        ),
                    ],
                ),
            },
        },
    ),
    "mod::Builder": RecordType(
        Symbol {
            name: "Builder",
            path: Local(
                "mod::Builder",
            ),
            aliases: None,
            visibility: Public,
            documentation: Some(
                "Incrementally assembles a path from segments.",
            ),
            deprecation: None,
            doc_links: None,
            inner: Record {
                name: Some(
                    "Builder",
                ),
                generics: None,
                fields: [
                    Known(
                        KnownField {
                            key: Ident(
                                "#segments",
                            ),
                            type: Some(
                                Slice(
                                    Primitive(
                                        String,
                                    ),
                                ),
                            ),
                            default_value: None,
                            attributes: FieldAttributes {
                                decorators: [],
                                is_mutable: true,
                                is_optional: false,
                                is_static: false,
                            },
                            visibility: Some(
                                Private,
                            ),
                            documentation: None,
                        },
                    ),
                ],
                call_signatures: None,
                constructors: None,
                methods: None,
                index_signatures: None,
                super_types: None,
                members: Some(
                    [
                        Local(
                            "Builder::push",
                        ),
                        Local(
                            "Builder::build",
                        ),
                    ],
                ),
                implemented_protocols: None,
            },
        },
    ),
    "mod::Builder::build": Function(
        Symbol {
            name: "build",
            path: Local(
                "mod::Builder::build",
            ),
            aliases: None,
            visibility: Public,
            documentation: Some(
                "Materialize the accumulated path.",
            ),
            deprecation: None,
            doc_links: None,
            inner: Function {
                input_parameters: None,
                output_parameters: Some(
                    [
                        Literal(
                            LiteralParameter {
                                name: "",
                                type: Some(
                                    Primitive(
                                        String,
                                    ),
                                ),
                                attributes: None,
                                default_value: None,
                                description: None,
                            },
                        ),
                    ],
                ),
                type_links: None,
                attributes: None,
                generics: None,
                receiver: None,
                overloads: None,
                implemented: true,
                members: None,
                implemented_protocols: None,
            },
        },
    ),
    "mod::Builder::push": Function(
        Symbol {
            name: "push",
            path: Local(
                "mod::Builder::push",
            ),
            aliases: None,
            visibility: Public,
            documentation: Some(
                "Append a segment.",
            ),
            deprecation: None,
            doc_links: None,
            inner: Function {
                input_parameters: Some(
                    [
                        Literal(
                            LiteralParameter {
                                name: "segment",
                                type: Some(
                                    Primitive(
                                        String,
                                    ),
                                ),
                                attributes: None,
                                default_value: None,
                                description: None,
                            },
                        ),
                    ],
                ),
                output_parameters: Some(
                    [
                        Literal(
                            LiteralParameter {
                                name: "",
                                type: Some(
                                    SelfType,
                                ),
                                attributes: None,
                                default_value: None,
                                description: None,
                            },
                        ),
                    ],
                ),
                type_links: None,
                attributes: None,
                generics: None,
                receiver: None,
                overloads: None,
                implemented: true,
                members: None,
                implemented_protocols: None,
            },
        },
    ),
    "mod::install": Function(
        Symbol {
            name: "install",
            path: Local(
                "mod::install",
            ),
            aliases: None,
            visibility: Private,
            documentation: None,
            deprecation: None,
            doc_links: None,
            inner: Function {
                input_parameters: None,
                output_parameters: Some(
                    [
                        Literal(
                            LiteralParameter {
                                name: "",
                                type: Some(
                                    Tuple(
                                        [],
                                    ),
                                ),
                                attributes: None,
                                default_value: None,
                                description: None,
                            },
                        ),
                    ],
                ),
                type_links: None,
                attributes: None,
                generics: None,
                receiver: None,
                overloads: None,
                implemented: true,
                members: None,
                implemented_protocols: None,
            },
        },
    ),
    "mod::toolkit": Module(
        Symbol {
            name: "toolkit",
            path: Local(
                "mod::toolkit",
            ),
            aliases: None,
            visibility: Public,
            documentation: Some(
                "A namespace grouping toolkit helpers.",
            ),
            deprecation: None,
            doc_links: None,
            inner: Module {
                members: Some(
                    [
                        Local(
                            "toolkit::VERSION",
                        ),
                        Local(
                            "toolkit::help",
                        ),
                    ],
                ),
            },
        },
    ),
    "mod::toolkit::VERSION": Constant(
        Symbol {
            name: "VERSION",
            path: Local(
                "mod::toolkit::VERSION",
            ),
            aliases: None,
            visibility: Public,
            documentation: Some(
                "The toolkit version.",
            ),
            deprecation: None,
            doc_links: None,
            inner: TypedBinding {
                ty: Some(
                    Primitive(
                        String,
                    ),
                ),
                value: None,
                mutable: Some(
                    false,
                ),
            },
        },
    ),
    "mod::toolkit::help": Function(
        Symbol {
            name: "help",
            path: Local(
                "mod::toolkit::help",
            ),
            aliases: None,
            visibility: Public,
            documentation: Some(
                "A helper reachable through the namespace.",
            ),
            deprecation: None,
            doc_links: None,
            inner: Function {
                input_parameters: None,
                output_parameters: Some(
                    [
                        Literal(
                            LiteralParameter {
                                name: "",
                                type: Some(
                                    Primitive(
                                        String,
                                    ),
                                ),
                                attributes: None,
                                default_value: None,
                                description: None,
                            },
                        ),
                    ],
                ),
                type_links: None,
                attributes: None,
                generics: None,
                receiver: None,
                overloads: None,
                implemented: true,
                members: None,
                implemented_protocols: None,
            },
        },
    ),
}
